# tixgraft

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.beads/: issues.jsonl
.github/workflows/: README.md  ci.yml
docs/: TESTING.md  schema.json
docs/examples/: basic-usage.yaml  kubernetes-setup.yaml  multi-repo.yaml  with-replacements.yaml
skill/: SKILL.md
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  operations.rs  system.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs
src/cli/args/: tests.rs
src/config/: context.rs  graft_yaml.rs  mod.rs  schema.rs  validation.rs  yaml.rs
src/config/context/: tests.rs
src/config/graft_yaml/: tests.rs
src/error/: mod.rs  types.rs
src/git/: mod.rs  repository.rs  sparse_checkout.rs
src/git/repository/: tests.rs
src/operations/: commands.rs  copy.rs  discovery.rs  mod.rs  post_commands.rs  pull.rs  replace.rs  skill.rs  to_command_line.rs  to_config.rs
src/operations/to_command_line/: tests.rs
src/operations/to_config/: tests.rs
src/system/: mock.rs  mod.rs  real.rs
src/utils/: fs.rs  mod.rs  path.rs
tests/: children_tests.rs  children_unit_tests.rs  cli_tests.rs  commands_unit_tests.rs  config_tests.rs  context_tests.rs  copy_unit_tests.rs  discovery_unit_tests.rs  error_unit_tests.rs  fs_unit_tests.rs  gitignore_tests.rs  graft_yaml_unit_tests.rs  local_tests.rs  path_unit_tests.rs  post_commands_tests.rs  replace_unit_tests.rs  repository_unit_tests.rs  require_clean_target_tests.rs  schema_unit_tests.rs  skill_tests.rs  skill_unit_tests.rs  sparse_checkout_tests.rs  sparse_checkout_unit_tests.rs  target_resolution_tests.rs  temp_dir_tests.rs  to_command_line_tests.rs  to_config_tests.rs  validation_unit_tests.rs  yaml_unit_tests.rs
tests/children_tests/: main.rs  tests.rs
tests/children_unit_tests/: main.rs  tests.rs
tests/cli_tests/: main.rs  tests.rs
tests/commands_unit_tests/: main.rs  tests.rs
tests/config_tests/: main.rs  tests.rs
tests/context_tests/: main.rs  tests.rs
tests/copy_unit_tests/: main.rs  tests.rs
tests/discovery_unit_tests/: main.rs  tests.rs
tests/error_unit_tests/: main.rs  tests.rs
tests/fs_unit_tests/: main.rs  tests.rs
tests/gitignore_tests/: main.rs  tests.rs
tests/graft_yaml_unit_tests/: main.rs  tests.rs
tests/integration/: cli_tests.rs  config_tests.rs  mod.rs
tests/local_tests/: main.rs  tests.rs
tests/path_unit_tests/: main.rs  tests.rs
tests/post_commands_tests/: main.rs  tests.rs
tests/replace_unit_tests/: main.rs  tests.rs
tests/repository_unit_tests/: main.rs  tests.rs
tests/require_clean_target_tests/: main.rs  tests.rs
tests/schema_unit_tests/: main.rs  tests.rs
tests/skill_tests/: main.rs  tests.rs
tests/skill_unit_tests/: main.rs  tests.rs
tests/sparse_checkout_tests/: main.rs  tests.rs
tests/sparse_checkout_unit_tests/: main.rs  tests.rs
tests/target_resolution_tests/: main.rs  tests.rs
tests/temp_dir_tests/: main.rs  tests.rs
tests/to_command_line_tests/: main.rs  tests.rs
tests/to_config_tests/: main.rs  tests.rs
tests/validation_unit_tests/: main.rs  tests.rs
tests/yaml_unit_tests/: main.rs  tests.rs
