[package]
name = "tixgraft"
version = "0.1.0"
edition = "2024"
authors = ["Eduardo Burgos <eduardo@tixena.com>"]
description = "A CLI tool for fetching reusable components from Git repositories"
license = "MIT"
repository = "https://github.com/tixena/tixgraft"
keywords = ["cli", "git", "scaffolding", "templates"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "tixgraft"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# YAML processing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# JSON Schema validation
jsonschema = "0.45.0"
serde_json = "1.0"

# Git operations
git2 = "0.20.4"

# System abstraction (filesystem, env, temp dirs)
os-shim = { git = "https://github.com/tixena/os-shim.git" }

# File system and path operations
tempfile = "3"
ignore = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Environment and system utilities
dirs = "6"

# Regex for text replacement
regex = "1.12.3"

# Progress indicators
indicatif = "0.18"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
include_dir = "0.7"

[dev-dependencies]
# Testing utilities
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
pub_with_shorthand = "allow"
module_name_repetitions = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
print_stderr = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
